--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+// variables
+$successGreen: rgba(59, 206, 24, 1);
 // only have table styling here
 body {
   padding-top: 50px;
@@ -172,7 +174,72 @@ body {
 }
 
 .hidden-file-browser {
-  display: none;
+  overflow: hidden;
+  position: relative;
+  width: 100px;
+  
+  #copied-textarea {
+    width: 100%;
+    z-index: -1;
+  }
+  
+  #hidden-files {
+    width: 100%;
+    z-index: -1;
+  }
+  
+  .hidden-overlay {
+    background-color: white;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+  }
+}
+
+.copy-output-btn {
+  background-color: rgba(0,0,0,0.08);
+  border: 0;
+  color: #0678BE;
+  float: right;
+  padding: 0 20px;
+  transition-duration: .2s;
+  
+  &:after {
+    content: 'Copy For Drupal';
+  }
+  
+  &:before {
+    content: '\f1a9';
+    font-family: 'FontAwesome';
+    font-size: 15pt;
+    margin-right: 5px;
+  }
+  
+  &:hover {
+    background-color: #0678BE;
+    color: white;
+  }
+  
+  &:focus {
+    outline: 0;
+  }
+}
+
+.drupal-copied {
+  background-color: $successGreen;
+  color: white;
+  
+  &:after {
+    content: 'Copied!';
+  }
+  
+  &:before {
+    content: '\f00c';
+  }
+  
+  &:hover {
+    background-color: $successGreen;
+  }
 }
 
 #import-table {
@@ -201,7 +268,7 @@ body {
 
 #import-table.correct-file-type {
   border-color: rgba(0, 0, 0, .2);
-  background-color: rgba(59, 206, 24, 1);
+  background-color: $successGreen;
 }
 
 #import-table.correct-file-type:before {
@@ -222,6 +289,11 @@ body {
   max-height: 60px;
   overflow-y: scroll;
   padding: 10px;
+}
+
+#html-output.drupal-copied-output {
+  border: 2px solid $successGreen;
+  color: $successGreen;
 }
 
 #table-output {
